--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     On discord:<i><b> eepylxna</b></i>
                 </li>
                 <li>
-                    On signal:<i><b> Lena.931 </b></i>
+                    On twitter<i><b> meowgreens </b></i>
                 </li>
-                <li>aaaand finally on aaa maybb bsky? not sure ... heh :3</li>
+                <li>purrs on your carpet, hehe oopsieee :3</li>
             </ul>
         </section>
     </body>
