--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Where can you find mee :3</h2>
             <ul>
                 <li>
-                    On discord:<i><b> eepylxna</b></i>
+                    On discord:<i><b> yurifuls</b></i>
                 </li>
                 <li>
                     On twitter<i><b> meowgreens </b></i>
