--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h2>Where can you find mee :3</h2>
             <ul>
                 <li>
-                    On discord:<i><b> yurifuls</b></i>
+                    On discord:<i><b> lena_cats</b></i>
                 </li>
                 <li>
-                    On twitter<i><b> meowgreens </b></i>
+                    On twitter<i><b> plasticmoldcat</b></i>
                 </li>
                 <li>purrs on your carpet, hehe oopsieee :3</li>
             </ul>
