--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
+    
+
+<head>
+        <title>Lena</title>
+        <link rel="shortcut icon" type="image/x-icon" href="fav.ico">
+        <meta charset="UTF-8">
+</head>
+
     <body>
         <section>
             <h1>Lena</h1>
-            <p>meoww mrrp test</p>
+            <a href="asset/pages/uses.html"><p>meoww mrrp</p></a>
             <p>
                 This is a <b>very simple</b> website I made by using Zed and by
                 following some random guide I found in 5 seconds teehe soo thats
