--- a/404.html
+++ b/404.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html lang="en">
-    
-<html>
-    <img src="/assets/kity.gif" alt="fling" style="width:400px;height:400px;">
+
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>404 Not Found</title>
+        <link rel="shortcut icon" type="image/x-icon" href="/assets/kita.jpg">
+    </head>
+
+    <body>
+        <style>
+    body{
+        background-color: black;
+    }
+    </style>
+        <img src="/assets/kity.gif" alt="fling" style="width:100%;height:100%;">
+    </body>
 </html>
