--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     </head>
 
-    <body>
+   <body>
         <section> <!--top menu--> 
          <nav class="navbar">
             <ul>
@@ -27,9 +27,9 @@
         </section>
         
         <section>
-            <div class="intro">
+            <div class="introduction">
                 <h3>Hi i'm lena</h3>
-                <p>in progress >< :D </p>
+                <p>a 19 year old bunny girl from Czechia,</p>
             </div>
         </section>
     </body>
