--- a/pages/devices.html
+++ b/pages/devices.html
@@ -17,9 +17,9 @@
             
              <nav class="navbar">
             <ul>
-                <li><a href="/"><img src="/assets/kita.jpg" alt="icon" style="width: 40px;height: 40px;"></a></li>
-                <li><a href="/pages/posts.html">posts</a></li>
-                <li><a href="/pages/devices.html">devices</a></li>
+                <li><a href="/"><img src="/assets/kita.jpg" alt="icon" style="width: 53px;height: 53px;border-radius: 50%;"></a></li>
+                <li><a href="/pages/posts.html">Blog</a></li>
+                <li><a href="/pages/devices.html">Devices</a></li>
             </ul>
          </nav>
         </section>
