--- a/pages/posts.html
+++ b/pages/posts.html
@@ -44,7 +44,7 @@
             Workspace folder and the folder with your source images. (Keep in mind COLMAP only supports OpenImageIO
             formats like JPG and PNG). Leave everything else at it is and <strong>press run</strong>.<img
                src="/assets/posts/gaussian blur/colmap_render_settings.png" alt="Automatic Reconstruction"> <br>
-            If you did everything correctly, it should render and look like this.<img src="/assets/posts/gaussian blur/colmap_render.png"
+            If you did everything correctly, it should restructure and look like this.<img src="/assets/posts/gaussian blur/colmap_render.png"
                alt="COLMAP render"></p>
       </li>
    </ol>
