bunny bunny bunny bunny

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -18,7 +18,7 @@
              <nav class="navbar">
             <ul>
                 <li><a href="/"><img src="/assets/kita.jpg" alt="icon" style="width: 53px;height: 53px;border-radius: 50%;"></a></li>
-                <li><a href="/pages/posts.html">Blog</a></li>
+                <li><a href="/pages/posts.html">Posts</a></li>
                 <li><a href="/pages/devices.html">Devices</a></li>
             </ul>
          </nav>
